--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -55,4 +55,4 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: artifact-jakarta
-        path: /home/jakarta/output.txt
+        path: output.txt
