--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -49,7 +49,8 @@ jobs:
         python-version: "3.10"
     - name: menjalankan aplikasi
       run: python main.py
-    - name: Ave Output
+      
+    - name: menyimpan Output
       run: echo "${{ steps.run_python_app.outputs.stdout }}" > output.txt
 
     - uses: actions/upload-artifact@v4
