--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,8 +47,11 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+        
     - name: menjalankan aplikasi
-      run: python main.py
+      run: |
+        python main.py > output.txt
+        echo "::set-output name=stdout::$(cat output.txt)"
       
     - name: menyimpan Output
       run: echo "${{ steps.run_python_app.outputs.stdout }}" > output.txt
